apps/archisteamfarm/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archisteamfarm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: archisteamfarm
  template:
    metadata:
      labels:
        app: archisteamfarm
    spec:
      containers:
        - name: archisteamfarm
          image: justarchi/archisteamfarm:latest
          resources:
            limits:
              cpu: "2000m"
              memory: "1Gi"
            requests:
              cpu: "0"
              memory: "0"
          ports:
            - containerPort: 1242
          volumeMounts:
            - mountPath: /app/config
              name: archisteamfarm-config
      volumes:
        - name: archisteamfarm-init-config
          configMap:
            name: archisteamfarm-config
        - name: archisteamfarm-config
          persistentVolumeClaim:
            claimName: archisteamfarm-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: archisteamfarm
spec:
  selector:
    app: archisteamfarm
  ports:
    - port: 1242
      targetPort: 1242
